All fields show up now

--- a/site.css
+++ b/site.css
@@ -121,3 +121,27 @@ section#films a {
   border-radius: 5px;
   border: 1px solid var(--dark2);
 }
+
+/* Vehicle page */
+section#drivers {
+  margin: 50px;
+}
+
+section#drivers ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+section#drivers a{
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.1em;
+
+  background-color: var(--light2);
+  color: var(--dark2);
+  font-weight: bold;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--dark2);
+}
