Fixed variable reference bugs, usually from replacing character with film. Also fixed CSS to apply to the new list sections I included.

--- a/site.css
+++ b/site.css
@@ -95,20 +95,29 @@ h1#name {
 
 section#planets,
 section#characters,
-section#films {
+section#films,
+section#vehicles,
+section#species,
+section#starships {
   margin: 50px;
 }
 
 section#planets ul,
 section#characters ul,
-section#films ul {
+section#films ul,
+section#vehicles ul,
+section#species ul,
+section#starships ul {
   list-style-type: none;
   padding: 0;
 }
 
 section#planets a,
 section#characters a,
-section#films a {
+section#films a,
+section#vehicles a,
+section#species a,
+section#starships a {
   display: inline-block;
   text-decoration: none;
   font-size: 1.1em;
