Added new CSS due to conflicts with selectors in site.css, applied to film.html and vehicle.html

--- a/css/site.css
+++ b/css/site.css
@@ -24,7 +24,7 @@ p {
 body, html {
   height: 100%;
   width: 100%;
-  background-image: url('assets/images/nightsky.jpg');
+  background-image: url('../assets/images/nightsky.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
