--- a/css/site.css
+++ b/css/site.css
@@ -67,7 +67,7 @@ label {
 #charactersList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 0;
 }
 
